# python-uv-spark-test

./: .gitignore  Makefile  README.md  pyproject.toml
src/sqltest/: tool.py
tests/: conftest.py
tests/unit/: test_tool.py
